--- a/app/src/main/res/xml/settings_lyric.xml
+++ b/app/src/main/res/xml/settings_lyric.xml
@@ -18,6 +18,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <PreferenceCategory
+        android:layout="@layout/preference_category_md"
+        android:title="@string/preference_lyric_quality">
+
     <com.ghhccghk.musicplay.ui.preference.CustomSingleSelectPreference
         android:defaultValue="Regular"
         android:layout="@layout/preference_switch"
@@ -65,5 +69,17 @@
         android:title="@string/setting_color_background_set"
         android:widgetLayout="@layout/preference_switch_widget"
         app:iconSpaceReserved="false" />
+
+    </PreferenceCategory>
+
+
+    <PreferenceCategory
+        android:layout="@layout/preference_category_md"
+        android:title="@string/settings_category_misc">
+
+
+
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
